# phy

./: .gitignore  Cargo.toml
.snapshot/src/: ball.rs.json  balls.rs.json
src/: ball.rs  balls.rs  main.rs  simulation.rs  utils.rs  wall.rs
src/phy1/: .gitignore  TEMP1.py  ball.py  cir.py  cvrec.py  g.txt  g1.txt  main.py  profile_results  rec.py  settings.py  simulation.py  softbody.py  spring.py  stroage.txt  structures.py  temp.py  utils.py  wa.txt  walls.py
